--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <img  src="DC.jpg" alt="img6">
   <img  src="SRH.jpg" alt="img6">
 </div>
-
+ <footer>
+    <h3 style="float:left; margin-left:10%;margin-bottom:5%;color:white; font-weight: 700;"  >Name:- Devraj Kumar</h3>
+    <h3 style="float:right; margin-right:10%;margin-bottom:5%;color:white;font-weight: 700;" > Roll no:- 1906111</h3>
+</footer>
   </body>
 </html>
